--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,9 @@
-name: flutter_game
+name: Warrior Runner
 description: A new Flutter application.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.0+1
+version: 1.0.1+2
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
