--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: 0.8.1
+  change_app_package_name: 0.1.3
 
 flutter_icons:
   android: true
